# HiconAgent

./: .gitignore  AITW_evaluation.py  AndroidControl_evaluation.py  Odyssey_evaluation.py  README.md  eval_aitw.sh  eval_android_control.sh  eval_odyssey.sh  pyproject.toml  requirements.txt
EasyR1/: requirements.txt
EasyR1/verl/models/: monkey_patch.py
EasyR1/verl/trainer/: config.py  core_algos.py  metrics.py  ray_trainer.py
EasyR1/verl/utils/logger/: logger.py
EasyR1/verl/workers/: fsdp_workers.py
EasyR1/verl/workers/actor/: config.py  dp_actor.py
EasyR1/verl/workers/rollout/vllm_rollout/: vllm_rollout_spmd.py
configs/rl/: grpo_example.yaml  ui_tars_2b_grpo.yaml  ui_tars_2b_grpo_.yaml
scripts/: merge.sh  model_merger.py  server.sh
scripts/gui/: run_training.sh
scripts/math/: run_qwen2_5_vl_3b_geo.sh
src/mirage/: __init__.py  inference.py  main.py
src/mirage/XYQVL/: __init__.py  configuration_qwen2_5_vl.py  modeling_qwen2_5_vl.py  modeling_qwen2_5_vl_raw.py  modular_qwen2_5_vl.py  record.py
src/mirage/reward/: __init__.py  custom_reward_manager.py  score.py
utils/: data_rollout_mp_faster.py  data_rollout_mp_faster_multi_images.py  data_rollout_mp_faster_multi_images_AITW.py  data_rollout_mp_faster_multi_images_Odyssey.py  eval.sh  eval_AITW.sh  eval_Odyssey.sh  eval_type_level.py
